# seller-analytics

./: .gitignore  BUILD  README.md  WORKSPACE  deps.bzl  docker-compose.yaml  go.mod  go.sum
src/pkg/cfg/viper/: BUILD.bazel  viper.go
src/pkg/db/yugabyte/: BUILD.bazel  model.go  yugabyte.go
src/pkg/http/domain/: BUILD.bazel  model.go
src/pkg/http/gin/: BUILD.bazel  server.go
src/pkg/http/gin/middleware/: BUILD.bazel  log.go
src/pkg/messagequeue/: BUILD.bazel  publisher.go  rabbitmq.go  subscriber.go  types.go
src/services/analytic/: BUILD.bazel  main.go
src/services/analytic/config/: BUILD.bazel  config.go  config.yaml
src/services/analytic/domain/: BUILD.bazel  analytic.go
src/services/analytic/handler/: BUILD.bazel  analytic.go  analytic_test.go  handler.go  model.go
src/services/analytic/repository/: BUILD.bazel  analytic.go  analytic_test.go  repository.go
src/services/analytic/repository/mocks/: BUILD.bazel  analytic.go
src/services/analytic/usecase/: BUILD.bazel  analytic.go  analytic_test.go  usecase.go
src/services/analytic/usecase/mocks/: BUILD.bazel  analytic.go
src/services/buyer/: BUILD.bazel  main.go
src/services/buyer/config/: BUILD.bazel  config.go  config.yaml
src/services/buyer/domain/: BUILD.bazel  buyer.go  constant.go  order.go
src/services/buyer/handler/: BUILD.bazel  auth.go  buyer.go  buyer_test.go  handler.go  model.go
src/services/buyer/repository/: BUILD.bazel  buyer.go  buyer_test.go  order.go  repository.go
src/services/buyer/repository/mocks/: BUILD.bazel  buyer.go  order.go
src/services/buyer/usecase/: BUILD.bazel  buyer.go  buyer_test.go  order.go  order_test.go  usecase.go
src/services/buyer/usecase/mocks/: BUILD.bazel  buyer.go  order.go
src/services/statistic/: BUILD.bazel  main.go
src/services/statistic/config/: BUILD.bazel  config.go  config.yaml
src/services/statistic/domain/: BUILD.bazel  statistics.go
src/services/statistic/handler/: BUILD.bazel  handler.go  model.go  statistics.go  statistics_test.go
src/services/statistic/repository/: BUILD.bazel  repository.go  statistics.go  statistics_test.go
src/services/statistic/repository/mocks/: BUILD.bazel  statistics.go
src/services/statistic/usecase/: BUILD.bazel  statistics.go  statistics_test.go  usecase.go
src/services/statistic/usecase/mocks/: BUILD.bazel  statistics.go
