load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "analytic.go",
        "handler.go",
        "model.go",
    ],
    importpath = "github.com/tokopedia-workshop-2022/seller-analytics-solution/src/services/analytic/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/http/domain",
        "//src/pkg/messagequeue",
        "//src/services/analytic/domain",
        "//src/services/analytic/usecase",
        "//src/services/statistic/domain",
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "handler_test",
    srcs = ["analytic_test.go"],
    embed = [":handler"],
    deps = [
        "//src/services/analytic/domain",
        "//src/services/analytic/usecase",
        "//src/services/analytic/usecase/mocks",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@io_gorm_datatypes//:datatypes",
    ],
)
