load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "buyer.go",
        "constant.go",
        "order.go",
    ],
    importpath = "github.com/tokopedia-workshop-2022/seller-analytics-solution/src/services/buyer/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/db/yugabyte",
        "@io_gorm_datatypes//:datatypes",
    ],
)
