load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "usecase",
    srcs = [
        "buyer.go",
        "order.go",
        "usecase.go",
    ],
    importpath = "github.com/tokopedia-workshop-2022/seller-analytics-solution/src/services/buyer/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//src/services/buyer/domain",
        "//src/services/buyer/repository",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "usecase_test",
    srcs = [
        "buyer_test.go",
        "order_test.go",
    ],
    embed = [":usecase"],
    deps = [
        "//src/pkg/db/yugabyte",
        "//src/services/buyer/domain",
        "//src/services/buyer/repository",
        "//src/services/buyer/repository/mocks",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
