load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "handler.go",
        "model.go",
        "statistics.go",
    ],
    importpath = "github.com/tokopedia-workshop-2022/seller-analytics-solution/src/services/statistic/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pkg/http/domain",
        "//src/pkg/messagequeue",
        "//src/services/statistic/domain",
        "//src/services/statistic/usecase",
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "handler_test",
    srcs = ["statistics_test.go"],
    embed = [":handler"],
    deps = [
        "//src/services/statistic/domain",
        "//src/services/statistic/usecase",
        "//src/services/statistic/usecase/mocks",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@io_gorm_datatypes//:datatypes",
    ],
)
