load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["log.go"],
    importpath = "github.com/tokopedia-workshop-2022/seller-analytics-solution/src/pkg/http/gin/middleware",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
