load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["statistics.go"],
    importpath = "github.com/tokopedia-workshop-2022/seller-analytics-solution/src/services/statistic/repository/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//src/services/statistic/domain",
        "@com_github_golang_mock//gomock",
    ],
)
